@@ -228,6 +228,15 @@ name|java
 operator|.
 name|util
 operator|.
+name|ArrayList
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Collection
 import|;
 end_import
@@ -238,15 +247,6 @@ operator|.
 name|util
 operator|.
 name|Collections
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|HashSet
 import|;
 end_import
 begin_import
@@ -300,51 +300,9 @@ name|java
 operator|.
 name|util
 operator|.
-name|Set
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|concurrent
 operator|.
 name|Callable
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|CompletionService
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|ExecutionException
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|ExecutorCompletionService
 import|;
 end_import
 begin_import
@@ -367,17 +325,6 @@ operator|.
 name|concurrent
 operator|.
 name|Executors
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|Future
 import|;
 end_import
 begin_import
@@ -1072,33 +1019,6 @@ argument_list|)
 decl_stmt|;
 try|try
 block|{
-name|CompletionService
-argument_list|<
-name|SolrCore
-argument_list|>
-name|completionService
-init|=
-operator|new
-name|ExecutorCompletionService
-argument_list|<>
-argument_list|(
-name|coreLoadExecutor
-argument_list|)
-decl_stmt|;
-name|Set
-argument_list|<
-name|Future
-argument_list|<
-name|SolrCore
-argument_list|>
-argument_list|>
-name|pending
-init|=
-operator|new
-name|HashSet
-argument_list|<>
-argument_list|()
-decl_stmt|;
 name|List
 argument_list|<
 name|CoreDescriptor
@@ -1117,6 +1037,20 @@ argument_list|(
 name|cds
 argument_list|)
 expr_stmt|;
+name|List
+argument_list|<
+name|Callable
+argument_list|<
+name|SolrCore
+argument_list|>
+argument_list|>
+name|creators
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+decl_stmt|;
 for|for
 control|(
 specifier|final
@@ -1125,17 +1059,6 @@ name|cd
 range|:
 name|cds
 control|)
-block|{
-specifier|final
-name|String
-name|name
-init|=
-name|cd
-operator|.
-name|getName
-argument_list|()
-decl_stmt|;
-try|try
 block|{
 if|if
 condition|(
@@ -1151,13 +1074,14 @@ name|isLoadOnStartup
 argument_list|()
 condition|)
 block|{
-comment|// Store it away for later use. includes non-transient but not
-comment|// loaded at startup cores.
 name|solrCores
 operator|.
 name|putDynamicDescriptor
 argument_list|(
-name|name
+name|cd
+operator|.
+name|getName
+argument_list|()
 argument_list|,
 name|cd
 argument_list|)
@@ -1171,13 +1095,10 @@ name|isLoadOnStartup
 argument_list|()
 condition|)
 block|{
-comment|// The normal case
-name|Callable
-argument_list|<
-name|SolrCore
-argument_list|>
-name|task
-init|=
+name|creators
+operator|.
+name|add
+argument_list|(
 operator|new
 name|Callable
 argument_list|<
@@ -1191,8 +1112,8 @@ specifier|public
 name|SolrCore
 name|call
 parameter_list|()
-block|{
-try|try
+throws|throws
+name|Exception
 block|{
 return|return
 name|create
@@ -1203,156 +1124,20 @@ literal|false
 argument_list|)
 return|;
 block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|e
-parameter_list|)
-block|{
-name|SolrException
-operator|.
-name|log
-argument_list|(
-name|log
-argument_list|,
-literal|null
-argument_list|,
-name|e
-argument_list|)
-expr_stmt|;
-return|return
-literal|null
-return|;
 block|}
-block|}
-block|}
-decl_stmt|;
-name|pending
-operator|.
-name|add
-argument_list|(
-name|completionService
-operator|.
-name|submit
-argument_list|(
-name|task
-argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
 block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|e
-parameter_list|)
-block|{
-name|SolrException
-operator|.
-name|log
-argument_list|(
-name|log
-argument_list|,
-literal|null
-argument_list|,
-name|e
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-while|while
-condition|(
-name|pending
-operator|!=
-literal|null
-operator|&&
-name|pending
-operator|.
-name|size
-argument_list|()
-operator|>
-literal|0
-condition|)
-block|{
 try|try
 block|{
-name|Future
-argument_list|<
-name|SolrCore
-argument_list|>
-name|future
-init|=
-name|completionService
+name|coreLoadExecutor
 operator|.
-name|take
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|future
-operator|==
-literal|null
-condition|)
-return|return;
-name|pending
-operator|.
-name|remove
+name|invokeAll
 argument_list|(
-name|future
+name|creators
 argument_list|)
 expr_stmt|;
-try|try
-block|{
-name|SolrCore
-name|c
-init|=
-name|future
-operator|.
-name|get
-argument_list|()
-decl_stmt|;
-comment|// track original names
-if|if
-condition|(
-name|c
-operator|!=
-literal|null
-condition|)
-block|{
-name|solrCores
-operator|.
-name|putCoreToOrigName
-argument_list|(
-name|c
-argument_list|,
-name|c
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-catch|catch
-parameter_list|(
-name|ExecutionException
-name|e
-parameter_list|)
-block|{
-name|SolrException
-operator|.
-name|log
-argument_list|(
-name|SolrCore
-operator|.
-name|log
-argument_list|,
-literal|"Error loading core"
-argument_list|,
-name|e
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 catch|catch
 parameter_list|(
@@ -1370,12 +1155,9 @@ name|ErrorCode
 operator|.
 name|SERVICE_UNAVAILABLE
 argument_list|,
-literal|"interrupted while loading core"
-argument_list|,
-name|e
+literal|"Interrupted while loading cores"
 argument_list|)
 throw|;
-block|}
 block|}
 comment|// Start the background thread
 name|backgroundCloser
@@ -1398,13 +1180,6 @@ expr_stmt|;
 block|}
 finally|finally
 block|{
-if|if
-condition|(
-name|coreLoadExecutor
-operator|!=
-literal|null
-condition|)
-block|{
 name|ExecutorUtil
 operator|.
 name|shutdownNowAndAwaitTermination
@@ -1412,7 +1187,6 @@ argument_list|(
 name|coreLoadExecutor
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 if|if
 condition|(
@@ -2620,16 +2394,6 @@ argument_list|,
 name|core
 argument_list|)
 decl_stmt|;
-comment|// keep core to orig name link
-name|solrCores
-operator|.
-name|removeCoreToOrigName
-argument_list|(
-name|newCore
-argument_list|,
-name|core
-argument_list|)
-expr_stmt|;
 name|registerCore
 argument_list|(
 name|name
@@ -2832,8 +2596,6 @@ operator|.
 name|remove
 argument_list|(
 name|name
-argument_list|,
-literal|true
 argument_list|)
 decl_stmt|;
 name|coresLocator
@@ -2903,8 +2665,6 @@ operator|.
 name|remove
 argument_list|(
 name|name
-argument_list|,
-literal|false
 argument_list|)
 decl_stmt|;
 name|coresLocator
@@ -3520,23 +3280,6 @@ argument_list|,
 name|msg
 argument_list|,
 name|ex
-argument_list|)
-return|;
-block|}
-DECL|method|getCoreToOrigName
-name|String
-name|getCoreToOrigName
-parameter_list|(
-name|SolrCore
-name|core
-parameter_list|)
-block|{
-return|return
-name|solrCores
-operator|.
-name|getCoreToOrigName
-argument_list|(
-name|core
 argument_list|)
 return|;
 block|}
